# CMakes_me_insane-Hardware_Info

./: CMakeLists.txt
CMakes_me_insane/: CMakeLists.txt  CMakes_me_insane.cpp  CMakes_me_insane.h
